welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:11: error: ';' expected but 'return' found.
}return "10:00" 
 ^